fix(suiteheader) Fixing the overflow issue mentioned in the PR comment.

--- a/packages/react/src/components/SuiteHeader/_suite-header.scss
+++ b/packages/react/src/components/SuiteHeader/_suite-header.scss
@@ -212,7 +212,7 @@
     }
   }
   button.admin-icon__hidden {
-    display: none !important;
+    visibility: hidden !important;
   }
   button.admin-icon__selected {
     background-color: $interactive-02;
